--- a/.tekton/apicast-base-push.yaml
+++ b/.tekton/apicast-base-push.yaml
@@ -453,7 +453,7 @@ spec:
       - name: IMAGE_URL
         value: $(tasks.build-image-index.results.IMAGE_URL)
       - name: IMAGE_DIGEST
-        value: $(tasks.build-image-index.results.IMAGE_DIGEST)g
+        value: $(tasks.build-image-index.results.IMAGE_DIGEST)
       runAfter:
       - build-image-index
       taskRef:
