--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,8 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "baseBranchPatterns": [
     "master"
-  ]
+  ],
+  "lockFileMaintenance": {
+    "enabled": false
+  }
 }
